<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_talk_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/talk_about" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/talk_about"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <View style="@style/spaceLine" />

    <LinearLayout
        android:id="@+id/ll_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/album" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/album"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <View style="@style/spaceLine" />

    <LinearLayout
        android:id="@+id/ll_collection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/collection" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/collection"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <View style="@style/spaceLine" />

    <LinearLayout
        android:id="@+id/ll_at_night"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/at_night" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/at_night"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <View style="@style/spaceLine" />

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/setting" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <View style="@style/spaceLine" />
</LinearLayout>