<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@drawable/header_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.wiggins.zoominscrollview.widget.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avatar"
            app:border_color="@color/red"
            app:border_width="2dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:text="@string/nick_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_attention"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector_transparent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:text="1w"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/attention"
                android:textColor="@color/white"
                android:textSize="@dimen/font_tiny" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:alpha="0.5"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/ll_fans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector_transparent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:text="100w"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/fans"
                android:textColor="@color/white"
                android:textSize="@dimen/font_tiny" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:alpha="0.5"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/ll_visitors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_selector_transparent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:text="10w"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/visitors"
                android:textColor="@color/white"
                android:textSize="@dimen/font_tiny" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>